--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-source-storyblok": "^0.2.6",
     "gatsby-transformer-sharp": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "storyblok-react": "0.0.10"
   },
   "devDependencies": {
     "prettier": "2.0.5"
